--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,9 +8,9 @@
         <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li> 
       {% endfor %}
     {% endfor %}
-    <li><a href="https://github.com/bitly/nsq/releases">Release Notes</a></li>
-    <li><a href="https://github.com/bitly/nsq">GitHub Repo</a></li>
-    <li><a href="https://github.com/bitly/nsq/issues">Issues</a></li>
+    <li><a href="https://github.com/nsqio/nsq/releases">Release Notes</a></li>
+    <li><a href="https://github.com/nsqio/nsq">GitHub Repo</a></li>
+    <li><a href="https://github.com/nsqio/nsq/issues">Issues</a></li>
     <li><a href="http://groups.google.com/group/nsq-users">Google Group</a></li>
   </ul>
 </div>
