--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/pygments.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <script>
     if (window.location.href.indexOf('nsq.io') == -1 && window.location.href.indexOf('127.0.0.1') == -1) {
@@ -29,16 +30,38 @@
     </script>
   </head>
   <body lang="en">
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{ site.baseurl }}/">NSQ <span class="muted version">v{{ site.version }}</span></a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{ site.baseurl }}/overview/design.html">Documentation</a></li>
+            <li><a href="{{ site.baseurl }}/community.html">Community</a></li>
+            <li><a href="https://github.com/nsqio/nsq"><i class="fa fa-github"></i> GitHub</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    {{ content }}
     <div class="container">
-      <div class="row">
-        <div class="span3 sidebar">{% include sidebar.html %}</div>
-        <div class="span9">{{ content }}</div>
-      </div>
-      <div class="row">
-        <footer class="footer">
-          <p class="muted built">Built: {{ site.time | date_to_rfc822 }}</p>
-        </footer>
-      </div>
+      <hr>
+      <footer>
+        <p class="pull-left">
+          © 2015 NSQ Authors
+        </p>
+        <p class="pull-right">
+          {{ site.time | date_to_rfc822 }}
+        </p>
+      </footer>
     </div>
   </body>
 </html>
