--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/pygments.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/anchor.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <script>
@@ -63,5 +64,11 @@
         </p>
       </footer>
     </div>
+    <script src="{{ site.baseurl }}/static/js/jquery-2.1.3.min.js"></script>
+    <script src="{{ site.baseurl }}/static/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/static/js/anchor.min.js"></script>
+    <script>
+    addAnchors('.doc-content h1, .doc-content h2, .doc-content h3, .doc-content h4');
+    </script>
   </body>
 </html>
