add nsq favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>NSQ Docs {{ site.version }} - {{ page.title }}</title>
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/static/img/nsq_favicon.png">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/css/pygments.css" />
