Header NSQ image

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -122,3 +122,11 @@ h4 {
     padding-top: 10px;
     font-size: 20px;
 }
+
+.navbar-brand > img {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+    margin-top: -5px;
+    display: inline;
+}
