--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}/">NSQ <span class="muted version">v{{ site.version }}</span></a>
+          <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="/static/img/nsq_blue.png" width="30" height="30">NSQ <span class="muted version">v{{ site.version }}</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-navbar-collapse">
