Hide menu for printing

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
   <div class="row">
-    <div class="col-md-3 col-xs-2 sidebar">
+    <div class="col-md-3 col-xs-2 sidebar hidden-print">
       <ul class="nav navbar-nav">
         {% for category in site.categories %}
           {% if category[0] != "blog" %}
