--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
               <li><a href="https://github.com/nsqio/nsq/releases">Release Notes</a></li>
               <li><a href="https://github.com/nsqio/nsq">GitHub Repo</a></li>
               <li><a href="https://github.com/nsqio/nsq/issues">Issues</a></li>
-              <li><a href="http://groups.google.com/group/nsq-users">Google Group</a></li>
+              <li><a href="https://groups.google.com/group/nsq-users">Google Group</a></li>
             {% endif %}
             </ul>
           </li>
