--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
         </p>
       </footer>
     </div>
-    <script src="{{ site.baseurl }}/static/js/jquery-2.1.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{{ site.baseurl }}/static/js/bootstrap.min.js"></script>
     <script src="{{ site.baseurl }}/static/js/anchor.min.js"></script>
     <script>
